Update default.zip, remove ZGC (causes crashes?)