@@ -10,7 +10,7 @@ set /p VERSION=<version.txt
 --input target/lib ^
 --main-jar server-%VERSION%.jar ^
 --type msi ^
---java-options "-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Dprism.verbose=true -Djavafx.verbose=true -Dprism.dirtyopts=false" ^
+--java-options "-Dprism.verbose=true -Djavafx.verbose=true -Dprism.dirtyopts=false" ^
 --main-class %MAIN_CLASS% ^
 --arguments Stream-Pi.startupRunnerFileName=run_min.exe ^
 --add-launcher run_min=assets/run_min_win.properties ^
